# windows

./: index.js  package-lock.json  package.json
raahi/: LICENSE  README.md  TODO.md  alembic.ini  main.py  pyproject.toml  requirements.txt
raahi/bot/: constants.py
raahi/bot/checks/: voice.py
raahi/bot/cogs/: help.py  music.py  premium.py  settings.py  utility.py
raahi/bot/core/: bot.py  config.py
raahi/bot/database/: __init__.py  models.py  repositories.py  session.py
raahi/bot/music/: player.py
raahi/bot/services/: no_prefix.py  premium.py
raahi/bot/utils/: error_handler.py  helpers.py
raahi/bot/views/: player.py
raahi/dashboard/: README.md
raahi/data/: raahi.db
raahi/migrations/: env.py
raahi/migrations/versions/: 001_initial.py
raahi/tests/: test_premium.py
src/: config.js  nothing.js
src/commands/Dev/: premium.js  say.js
src/commands/Favourite/: clearlikes.js  like.js  playliked.js  showliked.js
src/commands/Filters/: karaoke.js
src/commands/General/: help.js
src/commands/Music/: 247.js
src/commands/Owner/: deploy.js
src/commands/Playlist/: add.js  addnowplaying.js  addqueue.js
src/commands/Settings/: dj.js
src/commands/Spotify/: spotify.js
src/database/: ignorechannel.sqlite  index.js  noprefix.sqlite  prefix.sqlite  votebypass.sqlite
src/events/Client/: interactionCreate.js  messageCreate.js  setupSystem.js  threadCreate.js  voiceStateUpdate.js
src/models/: autoreconnect.js  dj.js  premium.js
src/structures/: Canvas.js  FilterExtend.js  MusicClient.js
src/utils/: functions.js  progressbar.js
(+8 files in other folders)
