[project]
name = "raahi"
version = "1.0.0"
description = "Raahi - Cozy premium Discord music bot"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Raahi Team"}]

dependencies = [
    "discord.py==2.7.1",
    "wavelink==3.5.2",
    "SQLAlchemy==2.0.41",
    "aiosqlite==0.20.0",
    "alembic==1.15.2",
    "pydantic==2.10.6",
    "pydantic-settings==2.7.1",
    "structlog==24.4.0",
    "aiohttp==3.11.12",
    "httpx==0.28.1",
    "python-dotenv==1.0.1",
    "rich==13.9.4",
    "psutil==6.1.1",
]

[project.optional-dependencies]
dev = [
    "ruff==0.9.6",
    "mypy==1.14.1",
    "pytest==8.3.5",
    "pytest-asyncio==0.25.3",
    "types-aiohttp==3.11.0",
]
dashboard = [
    "fastapi==0.115.8",
    "uvicorn==0.34.0",
    "jinja2==3.1.5",
    "python-multipart==0.0.20",
    "itsdangerous==2.2.0",
    "starlette==0.46.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
